Uploaded image for project: 'Thrift'
  1. Thrift
  2. THRIFT-4329

c_glib Doesn't have a multiplexed processor

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • 0.10.0
    • 0.11.0
    • C glib - Library
    • None

    Description

      It seems that multiplexed protocol only implements thrift_multiplexed_protocol_write_message_begin that's ok for sending messages to a multiplexed server but not for the C server. We also need a multiplexed processor for the server.

      Attachments

        Activity

          People

            gad Gonzalo Aguilar
            gad Gonzalo Aguilar
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: