THRIFT-4329: multiplexed processor, client and server for c_glib Client: c_glib

This closes #1361